--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <h1>Atividade com Git</h1>
 <p> O git é um modo mais fácil de progamadores compartilharem suas experiencias a ponto de compartilharem seus códigos e que todos 
 cooperem e resolvam os código compartilhados juntos assim trabalhando em equipe.</p>
+
+<a href="dupla.html">CLIQUE AQUI PARA IR PAR AO OUTRO ARQUIVO</a>
 </body>
 </html>
