--- a/dupla.html
+++ b/dupla.html
@@ -6,5 +6,7 @@
 <h1>Atividade com Git</h1>
 <p> Victor Hugo Camilo Araújo = 201810103 </p>
 <p> Felipe Duarte Sobreira Nascimento = 201810113</p>
+
+<a href="index.html">CLIQUE AQUI PARA IR PAR AO OUTRO ARQUIVO</a>
 </body>
 </html>
